HelloUltraviolet/Fixtures/RejectedSource/Patterns/PatternDiagnosticsSupplement/Source/Main.uv
//! Rejected pattern specimen for the pattern diagnostic supplement table.

public procedure patternDiagnosticsSupplementReference() -> i32 {
    let pair: (i32, i32) = (1, 2)
    let (value, value) = pair
    return value
}
